--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,18 @@
             "email": "eric@ericstern.com"
         }
     ],
-    "require": {},
+    "autoload": {
+      "psr-4": {
+        "Firehed\\LSPHP\\": "src"
+      }
+    },
+    "bin": [
+      "bin/lsphp"
+    ],
+    "require": {
+        "psr/log": "^1.0",
+        "fguillot/simplelogger": "^1.0"
+    },
     "require-dev": {
         "phpunit/phpunit": "^6.5",
         "phpstan/phpstan": "^0.9.0",
