--- a/composer.json
+++ b/composer.json
@@ -19,8 +19,8 @@
     ],
     "require": {
         "php": "^7.1",
-        "psr/log": "^1.0",
-        "fguillot/simplelogger": "^1.0"
+        "firehed/simplelogger": "^2.0",
+        "psr/log": "^1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^6.5",
